<?xml version="1.0" encoding="utf-8"?>
<!-- Long-press launcher shortcuts. Each launches MainActivity with a
     lastglance:// deep link (and an lglink extra fallback) that the web app
     routes on foreground (see MainActivity.captureWidgetDeepLink /
     routeWidgetDeepLink). Dynamic "top overdue" shortcuts are added at runtime
     from the snapshot (see WidgetShortcuts). -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="soon"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_soon"
        android:shortcutShortLabel="@string/shortcut_soon_short"
        android:shortcutLongLabel="@string/shortcut_soon_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lastglance.app"
            android:targetClass="com.lastglance.app.MainActivity"
            android:data="lastglance://filter/soon">
            <extra android:name="lglink" android:value="filter:soon" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lastglance.app"
            android:targetClass="com.lastglance.app.MainActivity"
            android:data="lastglance://action/search">
            <extra android:name="lglink" android:value="action:search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="add"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add_short"
        android:shortcutLongLabel="@string/shortcut_add_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.lastglance.app"
            android:targetClass="com.lastglance.app.MainActivity"
            android:data="lastglance://action/add">
            <extra android:name="lglink" android:value="action:add" />
        </intent>
    </shortcut>
</shortcuts>
